# gyandeep-multi-llm-providers

./: .env  .env.example  .gitignore  README.md  SubjectList.md  app.py  parser.py  requirements.txt  start_services.sh  test_endpoint.py  test_sarvam.py  totalBook.txt  transform.py
core/agents/: __init__.py  context_manager.py  prompt_manager.py
core/models/: __init__.py  plugins.py
core/services/inference/: utils.py
core/services/ingestion/: __init__.py  embedding_pipeline.py  pdf_ocr.py
core/services/plugins/: __init__.py  manim_video_plugin.py  runtime.py
core/services/storage/: embedding_service.py  schema.sql
dashboard/backend/: app.py  config.py
dashboard/frontend/: index.html
dashboard/frontend/static/: app.js  index.css
gyandeep_rs/: Cargo.toml
rust/: pyproject.toml
rust/src/: lib.rs
static/: app.js  index.css
templates/: index.html
tests/: test_dashboard_app.py  test_inference_service.py  test_models.py  test_plugin_runtime.py
